--- a/01-start.Rmd
+++ b/01-start.Rmd
@@ -4,6 +4,8 @@ output:
   html_document:
     df_print: paged
     css: "style.css"
+    toc: true
+    toc_depth: 2
 ---
 
 <head>
@@ -121,6 +123,37 @@ To load a specific package within an R session, use the "library" function:
 library(dplyr)
 ```
 
+## Genomics file formats
+***
+
+We will work with several different genomic datasets including genome sequences, gene models, ChIP-seq peak co-ordinates and aligned sequencing reads. Most of these datasets exist in databases outside of R in standardised text formats. It will be useful to familiarise yourself with these formats and the type of data stored within each.
+
+In this course we will use Fasta, Bed, wiggle and GFF files. A brief summary of file formats is provided below as well as in this [presentation](https://docs.google.com/presentation/d/1WjaovDGr6YF0oHU1b1tJwBBvaqAdxBahOWk72LUrmjc/edit?usp=sharing)
+
+### [Fasta](https://en.wikipedia.org/wiki/FASTA_format)
+Standard format for sequence data (DNA/RNA or protein). Can store multiple sequences separated by unique headers.
+
+### [Fastq](https://en.wikipedia.org/wiki/FASTQ_format)
+Fastq is similar to Fasta but is used to store sequencing reads and includes extra lines to encode quality scores.
+
+### [Bed](https://genome.ucsc.edu/FAQ/FAQformat.html#format1)
+Bed (browser extensible data) files store genomic co-ordinates to represent positions of features such as genes, ChIP-seq peaks or regulatory features (e.g. CpG islands). Bed files have at least 3 columns (chromosome, start, end) to encode regions of the genome. 
+* Bed6 is a strict version of the bed format where each region must have a score, strand and name (chromosome, start, end, name, score, strand).
+* Bed12 has extra columns to represent exons in gene models.
+* There is a binary version of bed called **bigBed**, used to store and visualise large datasets.
+
+### [Wiggle](https://genome.ucsc.edu/goldenPath/help/wiggle.html)
+The wiggle or .wig format is used to represent signals or scores across the genome (e.g. sequencing read depth, GC% etc.). It has four columns (chromosome,start,end, score). There is a binary version called bigWig used to store and visualise large datasets.
+
+### [GFF/GTF](https://en.wikipedia.org/wiki/General_feature_format)
+The GFF (general feature format) is used to store rich information on genomic annotations. GTF (gene transfer format) is a derivative of GFF which stores gene transcript models, with detailed information on genetic features such as start codons, alternative transcripts, exons and CDS.
+
+### [SAM](https://samtools.github.io/hts-specs/SAMv1.pdf)
+The SAM (sequence alignment/map) format stores sequencing reads and quality scores as well as detailed information following alignment to a genome/transcriptome. There is a binary version called BAM used to store and visualise large datasets. 
+
+### [VCF](https://genome.ucsc.edu/goldenPath/help/vcf.html)
+The VCF (variant calling format) is used to store positions of SNPs, INDELs and other genomic variations following variant calling analysis
+
 <br>
 <div class="key-points">
 <h2><i class="fas fa-thumbtack"></i> How to follow this tutorial</h2>
@@ -128,6 +161,7 @@ library(dplyr)
  * Create a new project in RStudio
  * Install the required libraries
  * Open a new R script (or R markdown file for advanced users)
+ * Be aware of common file formats for genomics data
  * It will be best to work with the tutorial and RStudio open together so you can easily switch between the two. Working on a wide split-screen or multiple desktops is the best setup.
  * I recommend typing out commands rather than copy-and-pasting if you want to learn. Remember you can use the <kbd>Tab</kbd> key to save on typing!
 </div>
