--- a/index.Rmd
+++ b/index.Rmd
@@ -18,4 +18,7 @@ This is the homepage for the **R with genomics data** training course hosted by 
 
 ----
 
+For further courses and resources see our [training page](https://wcbinf.github.io/wcb_bioinformatics/).
+
 For more information contact [Shaun Webb](mailto:shaun.webb@ed.ac.uk).
+
